--- a/assets/monophase/styles.scss
+++ b/assets/monophase/styles.scss
@@ -1,3 +1,17 @@
 ---
 ---
 @import "monophase/main";
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f4f4f4;
+}
