--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,25 @@
 ---
 layout: default
+title: Home
 ---
+<h1>{{ site.title }}</h1>
+<p>{{ site.description }}</p>
 
+<!-- 📌 카테고리 목록 추가 -->
+<h2>📂 카테고리 목록</h2>
+<ul>
+  {% for category in site.categories %}
+    <li><a href="{{ site.baseurl }}/categories/{{ category[0] | slugify }}/">{{ category[0] }}</a> ({{ category[1] | size }})</li>
+  {% endfor %}
+</ul>
+
+<!-- 📌 최신 포스트 목록 -->
+<h2>📝 최신 글</h2>
+<ul>
+  {% for post in site.posts %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date: "%Y-%m-%d" }})</li>
+  {% endfor %}
+</ul>
 <div class="posts">
   {% assign posts = site.posts %}
   {% if paginator %}
