--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,1 +1,16 @@
+---
+layout: default
+---
 
+<h1>{{ page.title }}</h1>
+
+{% assign category_posts = site.categories[page.category] %}
+{% if category_posts.size > 0 %}
+  <ul>
+    {% for post in category_posts %}
+      <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a> ({{ post.date | date: "%Y-%m-%d" }})</li>
+    {% endfor %}
+  </ul>
+{% else %}
+  <p>이 카테고리에 해당하는 게시글이 없습니다.</p>
+{% endif %}
